# Nudge

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
nudge/: __init__.py
nudge/analytics/: __init__.py  analytics.py
nudge/cli/: __init__.py  cli.py  graphs.py  motivational.py
nudge/habit_manager/: __init__.py  habit_manager.py
nudge/habits/: __init__.py  habit.py
nudge/nudge_utils/: motivational.py
nudge/storage/: __init__.py  seed_data.py  storage.py
tests/: __init__.py  test_analytics.py  test_cli.py  test_habit.py  test_habit_manager.py  test_seed_data_streaks.py  test_storage.py
